@@ -3,6 +3,7 @@ Objective Caml 3.11.2:
 
 Bug fixes:
 - PR#4421: ocamlbuild uses wrong compiler for C files
+- PR#4710, PR#4720: ocamlbuild does not use properly configuration information
 - PR#4750: under some Windows installations, high start-up times for Unix lib
 - PR#4810: BSD problem with socket addresses, e.g. in Unix.getnameinfo
 - PR#4813: issue with parsing of float literals by the GNU assembler
